aws 를 위한 HealthCheck 추가